# docs/swagger.json
@@ -352,6 +352,44 @@
                 }
             }
         },
+        "/rbac/v1/account/update": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC 账户配置"
+                ],
+                "summary": "[账户配置更新]",
+                "parameters": [
+                    {
+                        "description": "request param",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UpdateAccountReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/ginutil.BaseResp"
+                        }
+                    }
+                }
+            }
+        },
         "/rbac/v1/action/create": {
             "post": {
                 "security": [
@@ -1364,13 +1402,12 @@
         "model.CreateAccountReq": {
             "type": "object",
             "required": [
-                "appId",
                 "nickname",
                 "password",
                 "username"
             ],
             "properties": {
-                "appId": {
+                "memo": {
                     "type": "string"
                 },
                 "nickname": {
@@ -1390,8 +1427,7 @@
                 "appId",
                 "method",
                 "name",
-                "path",
-                "status"
+                "path"
             ],
             "properties": {
                 "appId": {
@@ -1406,10 +1442,6 @@
                 },
                 "path": {
                     "type": "string"
-                },
-                "status": {
-                    "description": "1-正常 2-锁定",
-                    "type": "integer"
                 }
             }
         },
@@ -1614,12 +1646,6 @@
         "model.ListAccount": {
             "type": "object",
             "properties": {
-                "appId": {
-                    "type": "string"
-                },
-                "appName": {
-                    "type": "string"
-                },
                 "createdAt": {
                     "type": "integer"
                 },
@@ -1645,9 +1671,6 @@
                     }
                 },
                 "status": {
-                    "type": "integer"
-                },
-                "tokenExpired": {
                     "type": "integer"
                 },
                 "updatedAt": {
@@ -1850,9 +1873,6 @@
         "model.RBACEnforceResp": {
             "type": "object",
             "properties": {
-                "accountId": {
-                    "type": "integer"
-                },
                 "actionPass": {
                     "description": "false-无权限",
                     "type": "boolean"
@@ -1860,11 +1880,17 @@
                 "appId": {
                     "type": "string"
                 },
-                "isRoot": {
-                    "type": "integer"
+                "message": {
+                    "type": "string"
                 },
                 "nickname": {
                     "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "verify": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1886,6 +1912,12 @@
         "model.RoleBase": {
             "type": "object",
             "properties": {
+                "appId": {
+                    "type": "string"
+                },
+                "appName": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1963,6 +1995,26 @@
                 },
                 "oldPassword": {
                     "type": "string"
+                }
+            }
+        },
+        "model.UpdateAccountReq": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "memo": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
@@ -2058,7 +2110,8 @@
         "model.UpdateMenuConfigReq": {
             "type": "object",
             "required": [
-                "id"
+                "id",
+                "status"
             ],
             "properties": {
                 "id": {
@@ -2077,6 +2130,10 @@
                     "type": "string"
                 },
                 "sequence": {
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "1-正常 2-锁定",
                     "type": "integer"
                 },
                 "typ": {
